<resources>
    <string name="app_name">Coffee_Kiosks</string>

    <string name="home_title_text">키오스크 연습용 앱</string>

    <!-- homeFragment text -->
    <string name="kiosk_practice_text">키오스크 \n\t\t\t체험</string>
    <string name="find_kiosk_text">키오스크\n위치 확인</string>
    <string name="check_mission_text">미션 확인</string>
    <string name="check_reward_text">리워드 확인</string>

    <!-- KioskMainFragment text -->
    <string name="inStore_text">매장 식사</string>
    <string name="takeOut_text">포장 하기</string>
    <string name="fab_description">이전 화면</string>

    <!-- Bottom sheet text -->
    <string name="bottom_sheet_title_text">키오스크 위치</string>
    <string name="place_title_text">위치 : </string>
    <string name="department_title_text">부서 : </string>

    <!-- type text -->
    <string name="coffee_text">커피</string>
    <string name="tea_text">티</string>
    <string name="ade_text">에이드</string>
    <string name="juice_text">주스</string>
    <string name="none_coffee_text">논커피</string>
    <string name="dessert_text">디저트</string>

    <!-- Options show text -->
    <string name="ok_text">선택 완료</string>
    <string name="cancel_text">취소</string>
    <string name="add_text">추가</string>
    <string name="non_free_text">유료옵션</string>
    <string name="free_text">무료옵션</string>
    <string name="hot_text">Hot</string>
    <string name="ice_text">Ice</string>
    <string name="ice_only_text">Iced Only</string>

    <!-- Free Options text -->
    <string name="sugar_text">설탕시럽</string>
    <string name="Ice_text">얼음</string>
    <string name="density_text">농도</string>
    <string name="one_pump_text">1펌프</string>
    <string name="two_pump_text">2펌프</string>
    <string name="three_pump_text">3펌프</string>
    <string name="little_text">적게</string>
    <string name="many_text">많이</string>
    <string name="low_dense_text">연하게</string>

    <!-- Options List & Price text -->
    <string name="hazelnutOptions_text">헤이즐넛시럽</string>
    <string name="perlOptions_text">펄 추가</string>
    <string name="vanillaOptions_text">바닐라시럽</string>
    <string name="espressoOptions_text">샷 추가</string>
    <string name="creamOptions_text">휘핑크림</string>
    <string name="price_500">500원</string>
    <string name="price_700">700원</string>
    <string name="price_900">900원</string>
    <string name="init_count_text">0</string>

    <!-- Pay Step 1 text -->
    <string name="step1_text">Step 1.</string>
    <string name="ask_accumulate_text">적립하시겠습니까?</string>
    <string name="message_text">회원이 아니면 [회원가입]을\n적립을 원하지 않으시면 결제를 진행해주세요.</string>
    <string name="check_phone_text">번호조회</string>
    <string name="check_barcode_text">바코드조회</string>
    <string name="add_user_text">회원가입</string>
    <string name="user_name_guide_text">회원명</string>
    <string name="phone_number_guide_text">전화번호</string>
    <string name="stamp_guide_text">스탬프 개수</string>
    <string name="next_text">다음</string>


    <!-- join page text -->
    <string name="search_join_text">회원 조회/가입</string>
    <string name="telephone_input_text">핸드폰 번호를 눌러주세요.</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="zero_text">0</string>
    <string name="delete_text">삭제</string>
    <string name="backspace_text">←</string>

    <!-- Pay Step 2 text -->
    <string name="step2_text">Step 2.</string>
    <string name="choose_pay_method_text">결제방식을 선택해 주세요!</string>
    <string name="pay_card_text">카드결제</string>
    <string name="pay_coupon_text">쿠폰결제</string>
    <string name="pay_stamp_text">스탬프결제</string>
    <string name="order_amount_text">주문 금액</string>
    <string name="discount_amount_text">할인 금액</string>
    <string name="pay_amount_text">결제 금액</string>
    <string name="all_cancel_text">전체취소</string>
    <string name="back_text">이전</string>

    <!-- Mission Fragment text -->
    <string name="mission_title_text">미션 목록</string>
    <string name="mission_start_text">미션 시작</string>
    <string name="mission_check_text">미션 확인</string>
    <string name="mission_not_exists">미션이 존재하지 않습니다</string>
    <string name="easy_text">쉬움</string>
    <string name="normal_text">보통</string>
    <string name="hard_text">어려움</string>
    <string name="dialog_ok_text">확인</string>


    <!-- Fragment Bundle -->
    <string name="home_fragment_value">home</string>
    <string name="mission_fragment_value">mission</string>



</resources>