<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/coffeeTextView"
            style="@style/category_text_style"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/coffee_text"
            app:layout_constraintEnd_toStartOf="@id/teaTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/teaTextView"
            style="@style/category_text_style"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/tea_text"
            app:layout_constraintEnd_toStartOf="@+id/adeTextView"
            app:layout_constraintStart_toEndOf="@id/coffeeTextView"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/adeTextView"
            style="@style/category_text_style"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/ade_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/teaTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nonCoffeeTextView"
            style="@style/category_text_style"
            android:text="@string/none_coffee_text"
            app:layout_constraintBottom_toTopOf="@id/topGuideLine"
            app:layout_constraintEnd_toStartOf="@id/juiceTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coffeeTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/juiceTextView"
            style="@style/category_text_style"
            android:text="@string/juice_text"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintBottom_toBottomOf="@id/topGuideLine"
            app:layout_constraintEnd_toStartOf="@id/dessertTextView"
            app:layout_constraintStart_toEndOf="@id/nonCoffeeTextView"
            app:layout_constraintTop_toBottomOf="@id/coffeeTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dessertTextView"
            style="@style/category_text_style"
            android:text="@string/dessert_text"
            app:layout_constraintBottom_toBottomOf="@id/topGuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/juiceTextView"
            app:layout_constraintTop_toBottomOf="@id/coffeeTextView" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/categoryFragmentContainerView"
            android:layout_width="@dimen/full_charge"
            android:layout_height="@dimen/full_charge"
            app:layout_constraintBottom_toTopOf="@id/bottomGuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topGuideLine" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.8"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/kioskBottomSheet"
        layout="@layout/kiosk_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>