<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/primary_color"
    android:id="@+id/mainLayout"
    android:focusable="true"
    android:clickable="true"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backFloatingActionButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12"
        android:elevation="0dp"
        app:srcCompat="@drawable/baseline_home_56"
        android:backgroundTint="@color/primary_color"
        android:contentDescription="@string/fab_description"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/full_charge"
        android:layout_height="@dimen/full_charge"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/advertise"
        android:scaleType="fitXY"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/inStoreButton"
        style="@style/kiosk_main_button_style"
        android:layout_width="@dimen/full_charge"
        android:layout_height="wrap_content"
        android:text="@string/inStore_text"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalGuideLine"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideLine"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button.Corner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/takeoutButton"
        style="@style/kiosk_main_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/takeOut_text"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/verticalGuideLine"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideLine"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button.Corner" />
</androidx.constraintlayout.widget.ConstraintLayout>